Fixing side-nav on Safari and adding waves effect to relative article button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,7 +31,7 @@ body {
 }
 
 #nav-category {
-  z-index: 1000;
+  z-index: 3;
   overflow: hidden;
 
   div.center {
